Fri Dec  3 10:27:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSApplication.m: ([-updateWindowsItem:]) modified to show
	document state image with new menus.
	* Source/NSMenuView.m: Implement ([-setNeedsDisplayForItemAtIndex:])
	* Source/NSMenuItemCell.m: Fix so that images are drawn.

Fri Dec  3 05:21:40 1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSTableColumn.m ([-setWidth:]): Tiny changing.
	* Documentation/gnustep-gui.tmpl.texi: Added some reference
 	documentation for GSHbox, GSVBox, GSTable.  

Thu Dec  2 17:02:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSView.m: ([-displayRectIgnoringOpacity:]) and
	([-displayIfNeededInRectIgnoringOpacity:]) - very tricksy fix so that
	views are still marked as needing display if any of their subviews
	need displaying (though the invalid rectangle may be zeroed if all
	the stuff at this level has been drawn).

Thu Dec  2 11:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSMenuView.m: ([-trackWithEvent:]) Removed spurious code
	that caused the bug of submenus being closed when you click on them!
	Sumbenus should only be closed at the end of a drag operation or if
	you click on their corresponding item in the parent menu.

Thu Dec  2  8:23:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSImage.m: Use opacity values from image reps to cache more
	intelligently, and set the opacity of caches correctly. Removed an ivar
	* Headers/AppKit/NSImage.h: removed _repList ivar - not needed
	* Source/NSView.m: Re-instate needs-display stuff for actual rectangles.

Thu Dec  2 01:28:34 1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/AppKit/NSTableHeaderView.h: Added copyright.
	* Source/NSTableHeaderView.m: Untested first attempt at drawing
 	code; it should work enough to make developing of NSTableView
 	possible.  Mouse events to be implemented after NSTableView works.